--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,10 @@ body{
     top: 900px;
     width: 200px;
   }
+  @media(max-width: 500px) {
+    top: 900px;
+    width: 100px;
+  }
 }
 .statue{
   position: absolute;
@@ -168,7 +172,6 @@ header{
 
 .container{
   max-width: 1440px;
-  height: 400px;
   margin: auto;
   padding-inline: 30px;
 }
@@ -178,7 +181,7 @@ main{
 }
 
 .hero{
-  height: 500px;
+  padding-block: 45px;
   width: 100%;
   background-image: url(/imgs/background.jpg);
   background-position: center;
@@ -201,13 +204,17 @@ main{
   }
   .hero-content{
     padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
   }
   .reviews-stars{
     display: flex;
     gap: 9px;
     align-items: center;
     justify-content: center;
-    margin: auto;
 
     .stars{
       display: flex;
@@ -220,7 +227,6 @@ main{
 
     span{
       color: var(--accent);
-      display: inline-flex;
       @media(max-width: 768px){
         font-size: 14px;
       }
@@ -241,7 +247,6 @@ main{
     color: var(--text-colour);
     font-family: "Merriweather", serif;
     font-size: 16px;
-    margin: 15px auto;
     text-align: center;
     @media(max-width: 768px){
       font-size: 14px;
@@ -282,12 +287,6 @@ main{
       }
     }
   }
-  .btn-div{
-    padding-top: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
 }
 
 .topic-container{
@@ -304,20 +303,23 @@ main{
   }
   h2{
     display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
     flex-direction: column;
     font-size: 32px;
-    @media(max-width: 360px) {
-      font-size: 24px;
+    @media(max-width: 500px) {
+      font-size: 18px;
     }
     small{
-      font-size: 16px;
+      font-size: 12px;
       font-weight: 400;
+      display: block;
     }
   }
 }
 
 .testimonial{
-  padding-top: 30px;
+  padding-block: 45px;
   background: var(--text-colour);
   .testimonial-grid{
     overflow-x: hidden;
